src/objects/Car_Model__c.object
<CustomObject>
    <description>Knowledge: This object is to store Car Model info to be used in DM and Car Model comparison.</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>MB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>A160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B180 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 BlueEFFICIENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 Sports Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B200 豪华型 夜行独享版</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K 经典型 (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C180K 经典型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI优雅型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 CGI时尚型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 Entry Elegance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 优雅型</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 旅行轿车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 时尚型旅行轿车</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200 luxury model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C200K sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 grace model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 fashion model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C230 sports car (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240 (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240A fashion model (not current series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C240E  grace model (not current series)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <picklist>
            <picklistValues>
                <fullName>A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Car Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Model__c</columns>
        <columns>Series__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Car Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Model</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>